# voice-perception

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
scripts/: test_wav.py
src/voice_perception/: __init__.py  audio.py  config.py  emotion.py  emotion_stability.py  fusion.py  main.py  perception.py  session.py  signals.py  transcription.py
static/: index.html
tests/: test_dependencies.py  test_emotion2vec.py  test_fusion.py  test_live_buffering.py  test_live_emotion_stability.py  test_one_shot.py  test_perception_parse.py  test_signals.py  test_static_ui.py
