[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-perception"
version = "0.1.0"
description = "Real-time paralinguistic voice perception service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "funasr-onnx==0.4.1",
    "funasr==1.3.23",
    "faster-whisper==1.1.1",
    "ctranslate2==4.8.1",
    "av==13.0.0",
    "numpy==1.26.4",
    "soundfile==0.12.1",
    "python-multipart==0.0.9",
    "websockets==13.0",
    "transformers==4.44.2",
    "tokenizers>=0.19,<0.20",
    "jieba==0.42.1",
    "torch==2.2.2",
    "torchaudio==2.2.2",
    "modelscope==1.37.1",
]

[tool.setuptools.packages.find]
where = ["src"]
